[project]
name = "default"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blueprint-compiler",
    "browser-use>=0.11.9",
    "dotenv>=0.9.9",
    "neovim>=0.3.1",
    "nltk>=3.8",
    "pip>=26.0.1",
    "pygments-base16>=1.0.3",
    "pygobject>=3.54.5",
]
